Fix side bar overflow issue

--- a/src/Sejil.Client/app.css
+++ b/src/Sejil.Client/app.css
@@ -66,14 +66,16 @@ section {
     background-color: #3a3633;
     color: #a8a8a8;
     border-bottom: 1px solid #525151;
+    font-size: 17px;
+    font-weight: bold;
     z-index: 5;
 }
 
 .center-pane {
     height: 100%;
-    width: 100%;
+    width: calc(100% - 250px);
     position: absolute;
-    padding-left: 250px;
+    left: 250px;
 }
 
 .filter-bar {
@@ -272,6 +274,7 @@ section {
     border-top: 1px solid #1a1817;
     position: absolute;
     padding-top: 40px;
+    overflow-y: auto;
 }
 
 .side-bar .section {
